--- a/app/page.module.css
+++ b/app/page.module.css
@@ -17,6 +17,8 @@
 }
 
 .searchInput {
+  position: sticky;
+  top: 24px;
   width: 50%;
   font-family: 'Plus Jakarta Sans', sans-serif;
   padding: 10px 30px 10px 16px;
